--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">IF26_Card</string>
+    <string name="card">Card</string>
+    <string name="reduction">Reduction</string>
+    <string name="setting">Setting</string>
 </resources>
